--- a/package.json
+++ b/package.json
@@ -3,27 +3,27 @@
   "version": "0.3.0",
   "private": true,
   "dependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@testing-library/jest-dom": "^6.1.2",
-    "@testing-library/react": "^11.2.6",
+    "@babel/plugin-transform-private-methods": "",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "ajv": "^8.12.0",
+    "ajv": "^8.17.1",
     "aos": "^3.0.0-beta.6",
-    "bootstrap": "^4.6.0",
-    "html-react-parser": "^1.2.4",
+    "bootstrap": "^5.3.3",
+    "html-react-parser": "^1.4.14",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.5.2",
-    "react-countup": "^4.3.3",
+    "react-bootstrap": "^1.6.8",
+    "react-countup": "^4.4.0",
     "react-dom": "^17.0.2",
-    "react-intl": "^5.15.7",
+    "react-intl": "^5.25.1",
     "react-owl-carousel": "^2.3.3",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
     "react-twitter-embed": "^4.0.4",
     "react-visibility-sensor": "^5.1.1",
-    "typescript": "^2.9.2",
-    "web-vitals": "^1.1.1"
+    "typescript": "^4.9.5",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
